@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class RealizarTarefaUI <<presentation>>
class RealizarTarefaController <<application>>
class PedidoRepository <<repository>>
class ColaboradorRepository <<repository>>
class Pedido <<domain>>
class ValidaForm <<domain>>

RealizarTarefaUI --> RealizarTarefaController
RealizarTarefaUI : doShow()

RealizarTarefaController : getUser()
RealizarTarefaController : getListaTarefasPendentes(colab)
RealizarTarefaController : getPedidoByTarefa(atividade)
RealizarTarefaController : getFormularioDaAtividade(atividade)
RealizarTarefaController : replaceFormularioAtividade(pedido, atividade, formulario)
RealizarTarefaController : getListaExpressaoRegularDoFormulario(formulario)
RealizarTarefaController : getAtributosDoFormulario(formulario)
RealizarTarefaController : getExpressaoRegularDoAtributo(atributo)
RealizarTarefaController : getVariavelDoAtributo(atributo)
RealizarTarefaController : validaFormulario(formulario)
RealizarTarefaController : completaDecisaoComentario(comentario, decisao, pedido, atividade,estadoPedido, estadoAtividade, duracao, dataResolucao)
RealizarTarefaController : savePedido(pedido)

Pedido : completaFormulario(formulario,variavel,atibuto)
Pedido : completaDecisaoComentario(comentario,decisao,pedido,atividade)

ValidaForm : validaFormulario(formulario)

RealizarTarefaController --> PedidoRepository
RealizarTarefaController --> FormularioRepository
RealizarTarefaController --> ColaboradorRepository
RealizarTarefaController --> Pedido
RealizarTarefaController --> ValidaForm

ColaboradorRepository : getUser()

PedidoRepository : getListaTarefasPendentes(colab)
PedidoRepository : getPedidoByTarefa(atividade)
PedidoRepository : getFormularioDaAtividade(atividade)
PedidoRepository : replaceFormularioAtividade(pedido, atividade, formulario)
PedidoRepository : getListaExpressaoRegularDoFormulario(formulario)
PedidoRepository : savePedido(pedido)

FormularioRepository : getAtributosDoFormulario(formulario)
FormularioRepository : getExpressaoRegularDoAtributo(atributo)
FormularioRepository : getVariavelDoAtributo(atributo)

@enduml